<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mageventory</string>
    <string name="refresh">Refresh</string>
    <string name="create">Create</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="sku">SKU</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="url">Store Url</string>
	<string name="save">Save</string>
	<string name="description">Description</string>
	<string name="status">Status</string>
	<string name="weight">Weight</string>
	<string name="Categories">Categories</string>
	<string name="Magventory_title">Mventory</string>
	<string name="home">Home</string>
	<string name="new_product">New Product</string>
	<string name="products">Products</string>
	<string name="settings">Configuration</string>
	<string name="product_details">Details</string>
	<string name="loading_products">Loading products</string>
	<string name="data_load_failure">Data load failure</string>
	<string name="check_your_internet_retry">Please check your Internet connection and try again.</string>
	<string name="try_again">Try again</string>
	<string name="cancel">Cancel</string>
	<string name="error">Error</string>
	<string name="invalid_product_id">Invalid product id</string>

	<string name="add_image">Add image</string>
	<string name="onClick">onClick</string>
	<string name="delete">Delete</string>
	<string name="rotate_left">Rotate left</string>
	<string name="crop">Crop</string>
	<string name="rotate_right">Rotate right</string>
	<string name="X">X</string>
	<string name="loading_categories">Loading categories...</string>
	<string name="loading_categories_and_attr_sets">Loading categories and attribute sets...</string>
	<string name="attr_set">Attribute set</string>
	<string name="category">Category</string>
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="quantity">Quantity</string>
	<string name="quantityDefault">1</string>
	<string name="total">Total</string>
	<string name="price">Price</string>
	<string name="images">Images</string>
	<string name="edit">Edit</string>
	<string name="sold">Sold</string>
	<string name="enabled">Enabled</string>
	<string name="queue">Queue</string>
	<string name="settings">Settings</string>
	<string name="sell">Sell</string>	
	<string name="details_sku_text">Sku</string>
	<string name="update">Update</string>
	<string name="attributes">Attributes</string>
	<string name="general">General</string>
	<string name="clear">Clear</string>
	<string name="long_tab_to_scan">Long tab to Scan</string>
	<string name="barcode">BarCode</string>
	<string name="creation">Creation</string>
	<string name="google_book_api_key">Google Books API Key</string>
	
	
	
	<!-- Android sphinx demo -->
    <string name="hello">Hello World, PocketSphinxDemo!</string>
	<color name="white">#FFF</color>
	<string name="performance_text">0.00 seconds 0.00 xRT</string>

    <!-- The name for the recognizer - to be shown in system settings. -->
    <string name="service_name">Sample Recognizer</string>
        
    <!-- The name of the settings activity. -->
    <string name="settings_name">Voice Recognition Settings</string>
    
    <string name="preference_enable_pocketsphinx">Use the PocketSphinx Speech Recognition Engine</string>
	<string name="preference_enable_pocketsphinx_summary">The PocketSphinx speech recognition works offline but it is very experimental and generally poorer quality than the Google recognition engine. Check this box if you are sure you want to use PocketSphinx as the default.</string>


    
    <!-- The title of the preference for the type of results to return (letters or numbers). -->
    <string name="results_type_title">Results type</string>
    
    <!-- The entry names of the preference for the type of results to return
         (letters or numbers). -->
    <string-array name="results_type_entries">
        <item>Letters</item>
        <item>Numbers</item>
    </string-array>
    
    <!-- The entry values of the preference for the type of results to return
         (letters or numbers). -->
    <string-array name="results_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    
    <!-- The default value of the preference for the type of results to return
         (letters or numbers). -->
    <string name="results_type_default_value">0</string>
</resources>