<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

            <EditText
                android:id="@+id/button"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:hint="Sold Price"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.4"
                android:text="Sold"
                />
                            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight=".1"
                android:text="..." />
        
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/product_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/product_price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/product_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/product_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/product_weight_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Categories"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/product_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />
    </LinearLayout>

</ScrollView>