<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="PxUsage" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="General"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/product_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/product_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sku"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/product_sku_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Long tab to Scan"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal" />
        
        
        <LinearLayout android:layout_width="match_parent"
            		  android:layout_height="wrap_content"
            		  android:orientation="horizontal">
		
        
        <LinearLayout android:layout_width="match_parent"
            		  android:layout_height="wrap_content"
            		  android:orientation="vertical"
            		  android:layout_weight="0.3">
		
        <LinearLayout android:id="@+id/textLL"
            		  android:layout_width="match_parent"
            		  android:layout_height="wrap_content"
            		  android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/product_price"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/quantity"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_weight="0.5"/>
        
        
        </LinearLayout>
        
        <LinearLayout android:layout_width="match_parent"
            		  android:layout_height="wrap_content"
            		  android:orientation="horizontal"
            		  android:layout_alignParentBottom="true"
            		  android:layout_alignParentLeft="true"
            		  android:layout_below="@id/textLL">
        <EditText
            android:id="@+id/product_price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal" 
            android:layout_weight="0.5" />
                
        <EditText
            android:id="@+id/quantity_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number" 
            android:layout_weight="0.5"/>

        </LinearLayout>
     
        </LinearLayout>
     
        
        	<Button
	            android:layout_marginTop="10dp"
	            android:id="@+id/createAndSellButton"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:text="@string/sell"
        		android:layout_weight="0.7"/>
        	      	
        </LinearLayout>
     
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/weight"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:editable="false"
            android:hint=""
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/attr_set"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/attr_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:editable="false"
            android:hint=""
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/attr_list_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Attributes"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/attr_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Creation"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/darker_gray" />

		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    
        	<Button
	            android:layout_marginTop="10dp"
	            android:id="@+id/createbutton"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/create"
	            android:layout_weight="0.5"/>
        
        </LinearLayout>

      
      
    </LinearLayout>

</ScrollView>