<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.webkit.WebView
        android:id="@+id/imageHolderWebView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:contentDescription="full size image from sdcard which can be edited and then saved or deleted"/>

    <LinearLayout
        android:id="@+id/buttonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal"
            android:weightSum="3" >

            <Button
                android:id="@+id/rotateLeftBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/gray_button_horizontal"
                android:minHeight="44dp"
                android:minWidth="60dp"
                android:onClick="@string/onClick"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/rotate_left"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rotateRightBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button_horizontal"
                android:minHeight="44dp"
                android:minWidth="60dp"
                android:onClick="@string/onClick"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/rotate_right"
                android:textColor="@color/white"
                android:textStyle="bold" android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/cropBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/gray_button_horizontal"
                android:minHeight="44dp"
                android:minWidth="60dp"
                android:onClick="@string/onClick"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/crop"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/gray_button_horizontal"
                android:minHeight="44dp"
                android:minWidth="60dp"
                android:onClick="@string/onClick"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gray_button_horizontal"
                android:minHeight="44dp"
                android:minWidth="60dp"
                android:onClick="@string/onClick"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>